
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct index_state {int cache_nr; struct cache_entry const** cache; } ;
typedef struct cache_entry {char* name; int ce_flags; } const cache_entry ;


 int CE_REMOVE ;
 int ce_namelen (struct cache_entry const*) ;
 int ce_stage (struct cache_entry const*) ;
 scalar_t__ memcmp (char const*,char*,int) ;
 int remove_index_entry_at (struct index_state*,int) ;

__attribute__((used)) static int has_file_name(struct index_state *istate,
    const struct cache_entry *ce, int pos, int ok_to_replace)
{
 int retval = 0;
 int len = ce_namelen(ce);
 int stage = ce_stage(ce);
 const char *name = ce->name;

 while (pos < istate->cache_nr) {
  struct cache_entry *p = istate->cache[pos++];

  if (len >= ce_namelen(p))
   break;
  if (memcmp(name, p->name, len))
   break;
  if (ce_stage(p) != stage)
   continue;
  if (p->name[len] != '/')
   continue;
  if (p->ce_flags & CE_REMOVE)
   continue;
  retval = -1;
  if (!ok_to_replace)
   break;
  remove_index_entry_at(istate, --pos);
 }
 return retval;
}
